--- a/jef-maven-plugin/pom.xml
+++ b/jef-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.easyframe</groupId>
 		<artifactId>ef-orm</artifactId>
-		<version>1.9.1.RC1</version>
+		<version>1.9.5-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>jef-maven-plugin</artifactId>
