--- a/orm-test/pom.xml
+++ b/orm-test/pom.xml
@@ -157,5 +157,11 @@
 			<version>3.7.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.easyframe</groupId>
+			<version>1.9.5-SNAPSHOT</version>
+			<artifactId>sql-parser</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
