--- a/orm-tutorial/pom.xml
+++ b/orm-tutorial/pom.xml
@@ -26,7 +26,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.easyframe</groupId>
-			<artifactId>common-orm-routing</artifactId>
+			<artifactId>ef-orm-spring</artifactId>
 			<version>1.9.5-SNAPSHOT</version>
 			<!-- <scope>system</scope> <systemPath>${project.basedir}/lib/common-orm-routing-1.9.5-SNAPSHOT.jar</systemPath> -->
 		</dependency>
