Adding Test cases for DataSourceLookup.

--- a/orm-tutorial/pom.xml
+++ b/orm-tutorial/pom.xml
@@ -16,19 +16,13 @@
 			<groupId>org.easyframe</groupId>
 			<artifactId>common-core</artifactId>
 			<version>1.9.5-SNAPSHOT</version>
-			<!--
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/common-core-1.9.5-SNAPSHOT.jar</systemPath>
-			-->
+			<!-- <scope>system</scope> <systemPath>${project.basedir}/lib/common-core-1.9.5-SNAPSHOT.jar</systemPath> -->
 		</dependency>
 		<dependency>
 			<groupId>org.easyframe</groupId>
 			<artifactId>common-orm</artifactId>
 			<version>1.9.5-SNAPSHOT</version>
-			<!-- 
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/common-orm-1.9.5-SNAPSHOT.jar</systemPath>
-			 -->
+			<!-- <scope>system</scope> <systemPath>${project.basedir}/lib/common-orm-1.9.5-SNAPSHOT.jar</systemPath> -->
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -89,25 +83,20 @@
 			<version>5.1.25</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.3.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-	<description>EF-ORM中文教程</description>
+	<description>EF-ORM教程</description>
 
 	<build>
 		<plugins>
-			<!-- 
-			<plugin>
-				<groupId>jef</groupId>
-				<artifactId>jef-maven-plugin</artifactId>
-				<version>1.9.5-SNAPSHOT</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>enhance</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			 -->
+			<!-- <plugin> <groupId>jef</groupId> <artifactId>jef-maven-plugin</artifactId> 
+				<version>1.9.5-SNAPSHOT</version> <executions> <execution> <goals> <goal>enhance</goal> 
+				</goals> </execution> </executions> </plugin> -->
 		</plugins>
 		<pluginManagement>
 			<plugins>
