--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
 				<configuration>
 					<charset>UTF-8</charset>
 					<docencoding>UTF-8</docencoding>
+					<show>public</show>
 				</configuration>
 				<executions>
 					<execution>
@@ -152,4 +153,16 @@
 
 		</plugins>
 	</build>
+	 <distributionManagement>
+		<repository>
+			<id>hikreleases</id>
+			<name>Release Repository</name>
+			<url>http://192.0.0.55/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>hiksnapshots</id>
+			<name>Snapshots Repository</name>
+			<url>http://192.0.0.55/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
