--- a/orm-tutorial/pom.xml
+++ b/orm-tutorial/pom.xml
@@ -25,6 +25,13 @@
 			<!-- <scope>system</scope> <systemPath>${project.basedir}/lib/common-orm-1.9.5-SNAPSHOT.jar</systemPath> -->
 		</dependency>
 		<dependency>
+			<groupId>org.easyframe</groupId>
+			<artifactId>orm-test</artifactId>
+			<version>1.9.5-SNAPSHOT</version>
+			<!-- <scope>system</scope> <systemPath>${project.basedir}/lib/common-core-1.9.5-SNAPSHOT.jar</systemPath> -->
+		</dependency>
+		
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
