--- a/common-orm/pom.xml
+++ b/common-orm/pom.xml
@@ -18,30 +18,26 @@
 			<artifactId>common-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<!-- <dependency> <groupId>javax.xml.bind</groupId> <artifactId>jaxb-api</artifactId> 
-			<version>2.2.1</version> <exclusions> <exclusion> <artifactId>stax-api</artifactId> 
-			<groupId>javax.xml.stream</groupId> </exclusion> <exclusion> <artifactId>activation</artifactId> 
-			<groupId>javax.activation</groupId> </exclusion> </exclusions> </dependency> -->
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-jpa_2.0_spec</artifactId>
 			<version>1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>17.0</version>
+		</dependency>
 		<!-- JTA dependencies -->
-		<dependency>
-			<groupId>com.atomikos</groupId>
-			<artifactId>transactions-jdbc</artifactId>
-			<version>3.8.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.atomikos</groupId>
-			<artifactId>transactions-jta</artifactId>
-			<version>3.8.0</version>
-			<scope>provided</scope>
-		</dependency>
-
+		<!-- <dependency> <groupId>com.atomikos</groupId> <artifactId>transactions-jdbc</artifactId> 
+			<version>3.8.0</version> <scope>provided</scope> </dependency> <dependency> 
+			<groupId>com.atomikos</groupId> <artifactId>transactions-jta</artifactId> 
+			<version>3.8.0</version> <scope>provided</scope> </dependency> -->
 
 		<!-- JDBC Drivers dependencies -->
 		<dependency>
@@ -101,25 +97,19 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- others dependencies -->
-		<!-- <dependency> <groupId>xerces</groupId> <artifactId>xercesImpl</artifactId> 
-			<version>2.9.1</version> </dependency> <dependency> <groupId>org.slf4j</groupId> 
-			<artifactId>slf4j-api</artifactId> <version>1.7.5</version> </dependency> -->
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.5</version>
 			<scope>test</scope>
 		</dependency>
-
 		<!-- 各种连接池的识别 常用的三种第三方连接池 -->
 		<dependency>
 			<groupId>com.cloudhopper.proxool</groupId>
 			<artifactId>proxool</artifactId>
 			<version>0.9.1</version>
 			<scope>provided</scope>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
@@ -154,7 +144,7 @@
 					<groupId>com.google.guava</groupId>
 					<artifactId>guava</artifactId>
 				</exclusion>
-					<exclusion>
+				<exclusion>
 					<groupId>org.slf4j</groupId>
 					<artifactId>slf4j-api</artifactId>
 				</exclusion>
