--- a/orm-test/pom.xml
+++ b/orm-test/pom.xml
@@ -51,12 +51,12 @@
 			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- 
 		<dependency>
-			<groupId>org.jumpmind.symmetric.jdbc</groupId>
+			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
-			<version>1.1.1</version>
-			<scope>test</scope>
-		</dependency>
+			<version>1.1.7</version>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
