--- a/orm-test/pom.xml
+++ b/orm-test/pom.xml
@@ -51,12 +51,8 @@
 			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
-			<version>1.1.7</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.mariadb.jdbc</groupId> <artifactId>mariadb-java-client</artifactId> 
+			<version>1.1.7</version> </dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
@@ -133,6 +129,12 @@
 		<!-- 这个版本的驱动不支持setQueryTImout <dependency> <groupId>postgresql</groupId> 
 			<artifactId>postgresql</artifactId> <version>9.1-901.jdbc3</version> <scope>provided</scope> 
 			</dependency> -->
+
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>sqljdbc4</artifactId>
+			<version>4.0.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
