--- a/orm-test/src/test/resources/junit4jef.properties
+++ b/orm-test/src/test/resources/junit4jef.properties
@@ -1,11 +1,15 @@
-oracle.url=jdbc:oracle:thin:@pc-jiyi:1521:orcl
-oracle.user=pomelo
-oracle.password=pomelo
+#oracle.url=jdbc:oracle:thin:@pc-jiyi:1521:orcl
+#oracle.user=pomelo
+#oracle.password=pomelo
+#
+#mysql.url=jdbc:mysql://pc-jiyi:3307/test?useUnicode=true&characterEncoding=UTF-8
+#mysql.user=root
+#mysql.password=admin
+#
+#postgresql.url=jdbc:postgresql://pc-jiyi:5432/test
+#postgresql.user=root
+#postgresql.password=admin
 
-mysql.url=jdbc:mysql://pc-jiyi:3307/test?useUnicode=true&characterEncoding=UTF-8
-mysql.user=root
-mysql.password=admin
-
-postgresql.url=jdbc:postgresql://pc-jiyi:5432/test
-postgresql.user=root
-postgresql.password=admin
+sqlserver.url=jdbc:sqlserver://10.17.48.103:1433; DatabaseName=jiyi2
+sqlserver.user=sa
+sqlserver.password=hik12345+
