Adding comments for LimitHandler and others.

--- a/orm-test/src/test/resources/junit4jef.properties
+++ b/orm-test/src/test/resources/junit4jef.properties
@@ -10,6 +10,6 @@
 #postgresql.user=root
 #postgresql.password=admin
 
-sqlserver.url=jdbc:sqlserver://10.17.48.103:1433; DatabaseName=jiyi2
+sqlserver.url=jdbc:sqlserver://10.7.52.152:1433; DatabaseName=jiyi2
 sqlserver.user=sa
-sqlserver.password=hik12345+
+sqlserver.password=Abc_123
