Fix #1 The configuration of 'db.dynamic.update=false' doesn't take effect.

--- a/orm-test/src/test/resources/junit4jef.properties
+++ b/orm-test/src/test/resources/junit4jef.properties
@@ -10,6 +10,6 @@ postgresql.url=jdbc:postgresql://pc-jiyi:5432/test
 postgresql.user=root
 postgresql.password=admin
 
-#sqlserver.url=jdbc:sqlserver://10.7.52.152:1433; DatabaseName=jiyi2
-#sqlserver.user=sa
-#sqlserver.password=Abc_123
+sqlserver.url=jdbc:sqlserver://10.7.52.152:1433; DatabaseName=jiyi2
+sqlserver.user=sa
+sqlserver.password=Abc_123
